# attest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: codesprint_to_attest.py  quickstart.py  trajectory.json  trajectory_gamed.json  trajectory_honest.json  trajectory_injection.json  trajectory_jailbreak.json
src/attest/: __init__.py  _llm.py  api.py  cli.py  providers.py  results.py  trajectory.py
src/attest/adapters/: langgraph.py
src/attest/checks/: injection.py  judge_baseline.py  role.py  tool_use.py  verify.py
src/attest/scoring/: report.py  stats.py
tests/: test_adapters.py  test_api.py  test_injection.py  test_llm_resilience.py  test_llm_wiring.py  test_providers.py  test_report.py  test_role.py  test_stats.py  test_tool_use.py  test_verify.py  test_vote.py
