[project]
name = "attest"
version = "0.1.0"
description = "Evidence-grounded evaluator for AI agent trajectories — judge by verifying claims against real tool outputs, not LLM-judge vibes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
attest = "attest.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
